[package]
name = "client-rust"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
aws_lambda_events = { workspace = true }
lambda-otel-lite = { workspace = true }
lambda_runtime = { workspace = true }
opentelemetry = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
